--- a/src/components/files/FileTreeView.css
+++ b/src/components/files/FileTreeView.css
@@ -1,7 +1,8 @@
 .file-tree-view {
   position: relative;
   overflow: auto;
-  height: 100%;
+  flex: 1;
+  min-height: 0;
   width: 100%;
   outline: none;
 }
